--- a/TPI-Gateway/gateway/gateway/src/main/resources/application.properties
+++ b/TPI-Gateway/gateway/gateway/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=gateway
 server.port=8082
+
+
+# punto microservicio de depósitos
+url.servicio.logistica=http://localhost:8080
