--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=admin
 server.port=8089
 
 # Base de datos en memoria con nombre específico
-spring.datasource.url=jdbc:h2:mem:tareasdb
+spring.datasource.url=jdbc:h2:file:./data/TPIdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -10,7 +10,7 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 # Inicialización automática de estructura y datos
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
