creacion de tramos rutas

--- a/logistica/src/main/resources/application.properties
+++ b/logistica/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.jpa.properties.hibernate.format_sql=true
 # Le dice a Spring que primero deje que Hibernate cree las tablas
 spring.jpa.defer-datasource-initialization=true
 maps.service.url=http://localhost:8080/api/distancia
+
+logging.level.org.springframework.http.converter.json=DEBUG
+logging.level.com.fasterxml.jackson.databind=DEBUG
