--- a/logistica/src/main/resources/application.properties
+++ b/logistica/src/main/resources/application.properties
@@ -20,3 +20,5 @@ maps.service.url=http://localhost:8080/api/distancia
 
 logging.level.org.springframework.http.converter.json=DEBUG
 logging.level.com.fasterxml.jackson.databind=DEBUG
+
+deposito.service.url=http://localhost:8089
