--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=pedidos
 server.port=8089
 
 # Base de datos en memoria con nombre específico
-spring.datasource.url=jdbc:h2:file:./data/TPIdb
+spring.datasource.url=jdbc:h2:mem:tareasdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
