conexion-soli-logistica

--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Le dice a Spring que primero deje que Hibernate cree las tablas
 spring.jpa.defer-datasource-initialization=true
+
+planificacion.url=http://localhost:8069/planificacion/crear
+
+logging.level.root=DEBUG
