--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Le dice a Spring que primero deje que Hibernate cree las tablas
 spring.jpa.defer-datasource-initialization=true
+
+ciudad.service.url=http://localhost:8069/logistica/ciudades/
