validacion-peso-vol-camion

--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -22,3 +22,4 @@ ciudad.service.url=http://localhost:8069/logistica/ciudades/
 planificacion.url=http://localhost:8069/planificacion/crear
 
 logging.level.root=DEBUG
+server.error.include-message=always
