"ya calcula bien las tarifas y devuelve costos estimados y tiempo estimado"

--- a/logistica/src/main/resources/application.properties
+++ b/logistica/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 # Inicialización automática de estructura y datos
 spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
