--- a/TPI-Gateway/gateway/gateway/src/main/resources/application.properties
+++ b/TPI-Gateway/gateway/gateway/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.port=8082
 
 
 # punto microservicio de depósitos
-url.servicio.admin=http://localhost:8080
+url.servicio.pedidos=http://localhost:8089
