--- a/logistica/src/main/resources/application.properties
+++ b/logistica/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8069
+server.port=8081
 spring.application.name=logistica
 # Base de datos en memoria con nombre específico
 spring.datasource.url=jdbc:h2:mem:tareasdb
@@ -21,4 +21,6 @@ maps.service.url=http://localhost:8080/api/distancia
 logging.level.org.springframework.http.converter.json=DEBUG
 logging.level.com.fasterxml.jackson.databind=DEBUG
 
-deposito.service.url=http://localhost:8089
+deposito.service.url=http://localhost:8082
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8084/realms/tpi-backend
