--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=pedidos
-server.port=8089
+server.port=8082
 
 # Base de datos en memoria con nombre específico
 spring.datasource.url=jdbc:h2:mem:tareasdb
@@ -18,7 +18,11 @@ spring.jpa.properties.hibernate.format_sql=true
 # Le dice a Spring que primero deje que Hibernate cree las tablas
 spring.jpa.defer-datasource-initialization=true
 
-ciudad.service.url=http://localhost:8069/logistica/ciudades/
-planificacion.url=http://localhost:8069/planificacion/crear
+ciudad.service.url=http://localhost:8081/logistica/ciudades/
+planificacion.url=http://localhost:8081/planificacion/crear
+
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8084/realms/tpi-backend
+
 
 logging.level.root=DEBUG
