--- a/TPI-Gateway/gateway/gateway/src/main/resources/application.properties
+++ b/TPI-Gateway/gateway/gateway/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=gateway
-server.port=8082
+server.port=8083
 
 
 # punto microservicio de depósitos
-url.servicio.admin=http://localhost:8080
+url.servicio.logistica=http://localhost:8081
+url.servicio.pedidos=http://localhost:8082
