post actualizacion tramo

--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.jpa.defer-datasource-initialization=true
 
 ciudad.service.url=http://localhost:8081/logistica/ciudades/
 planificacion.url=http://localhost:8081/planificacion/crear
+tramos.service.url=http://localhost:8081/planificacion/modificar
 
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8084/realms/tpi-backend
