--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -6,4 +6,5 @@ server.port=8083
 url.servicio.logistica=http://localhost:8081
 url.servicio.pedidos=http://localhost:8082
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8084/realms/tpi-backend
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloack:8080/realms/tpi-backend
+
