--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,67 @@
 version: '3.1'
+
 services:
- keycloak:
-  image: quay.io/keycloak/keycloak:24.0.3
-  container_name: keycloak
-  command: start-dev
-  ports:
-  - "8084:8080"
-  environment:
-  - KEYCLOAK_ADMIN=admin
-  - KEYCLOAK_ADMIN_PASSWORD=admin123
-  volumes:
-  - keycloak_data:/opt/keycloak/data
+  geoapi:
+    build:
+      context: ./geoapi
+    container_name: geoapi
+    ports:
+      - "8084:8084"
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    depends_on:
+      - keycloak
+
+  logistica:
+    build:
+      context: ./logistica
+    container_name: logistica
+    ports:
+      - "8081:8081"
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    depends_on:
+      - keycloak
+      - geoapi
+
+  pedidos:
+    build:
+      context: ./pedidos
+    container_name: pedidos
+    ports:
+      - "8082:8082"
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    depends_on:
+      - keycloak
+      - logistica
+
+  gateway:
+    build:
+      context: ./gateway
+    container_name: gateway
+    ports:
+      - "8083:8083"
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    depends_on:
+      - keycloak
+      - logistica
+      - pedidos
+      - geoapi
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.3
+    container_name: keycloak
+    command: start-dev
+    ports:
+      - "8080:8080"
+    environment:
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin123
+    volumes:
+      - keycloak_data:/opt/keycloak/data
+
 volumes:
- keycloak_data:
+  keycloak_data:
+
