--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 
 ciudad.service.url=http://localhost:8081/logistica/ciudades/
-planificacion.url=http://localhost:8081/planificacion/crear
-tramos.service.url=http://localhost:8081/tramos/modificar
+planificacion.url=http://localhost:8081/logistica/planificacion/crear
+tramos.service.url=http://localhost:8081/logitsitca/tramos/modificar
 
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8084/realms/tpi-backend
