bda lista pedidos

--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -2,21 +2,24 @@ spring.application.name=pedidos
 server.port=8082
 
 # Base de datos en memoria con nombre específico
-spring.datasource.url=jdbc:h2:mem:tareasdb
+spring.datasource.url=jdbc:h2:file:./data/tpiDb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
 # Habilitar consola web de H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
 # Inicialización automática de estructura y datos
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# Le dice a Spring que primero deje que Hibernate cree las tablas
 spring.jpa.defer-datasource-initialization=true
+
+# Control de ejecución de data.sql
+spring.sql.init.mode=never
+
 
 ciudad.service.url=http://localhost:8081/logistica/ciudades/
 planificacion.url=http://localhost:8081/logistica/planificacion/crear
