base datos logistica

--- a/logistica/src/main/resources/application.properties
+++ b/logistica/src/main/resources/application.properties
@@ -1,22 +1,24 @@
 server.port=8081
 spring.application.name=logistica
 # Base de datos en memoria con nombre específico
-spring.datasource.url=jdbc:h2:mem:tareasdb
+spring.datasource.url=jdbc:h2:file:./data/tpiDb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
 # Habilitar consola web de H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-# Inicialización automática de estructura y datos
-spring.jpa.hibernate.ddl-auto=create
-spring.sql.init.mode=always
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# Inicialización automática de estructura y datos
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=never
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # Le dice a Spring que primero deje que Hibernate cree las tablas
 spring.jpa.defer-datasource-initialization=true
+
 maps.service.url=http://localhost:8084/api/distancia
 
 logging.level.org.springframework.http.converter.json=DEBUG
